fix contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ p {
 .navStyle ul li a {
     display: block;
     font-size: 14px;
-    color: #303030;
+    color: #525252;
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 600;
